@@ -1,6 +1,6 @@
 /*
 
-Copyright (c) 2006-2012, Arvid Norberg
+Copyright (c) 2006-2013, Arvid Norberg
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
@@ -36,6 +36,7 @@ POSSIBILITY OF SUCH DAMAGE.
 #include "libtorrent/kademlia/node_id.hpp"
 #include "libtorrent/socket.hpp"
 #include "libtorrent/address.hpp"
+#include "libtorrent/union_endpoint.hpp"
 
 namespace libtorrent { namespace dht
 {
@@ -43,9 +44,8 @@ namespace libtorrent { namespace dht
 struct node_entry
 {
 	node_entry(node_id const& id_, udp::endpoint ep, int roundtriptime = 0xffff, bool pinged = false)
-		: addr(ep.address())
-		, port(ep.port())
-		, timeout_count(pinged ? 0 : 0xffff)
+		: endpoint(ep)
+		, timeout_count(pinged ? 0 : 0xff)
 		, rtt(roundtriptime)
 		, id(id_)
 	{
@@ -55,9 +55,8 @@ struct node_entry
 	}
 
 	node_entry(udp::endpoint ep)
-		: addr(ep.address())
-		, port(ep.port())
-		, timeout_count(0xffff)
+		: endpoint(ep)
+		, timeout_count(0xff)
 		, rtt(0xffff)
 		, id(0)
 	{
@@ -67,7 +66,7 @@ struct node_entry
 	}
 
 	node_entry()
-		: timeout_count(0xffff)
+		: timeout_count(0xff)
 		, rtt(0xffff)
 		, id(0)
 	{
@@ -76,27 +75,25 @@ struct node_entry
 #endif
 	}
 	
-	bool pinged() const { return timeout_count != 0xffff; }
-	void set_pinged() { if (timeout_count == 0xffff) timeout_count = 0; }
-	void timed_out() { if (pinged()) ++timeout_count; }
+	bool pinged() const { return timeout_count != 0xff; }
+	void set_pinged() { if (timeout_count == 0xff) timeout_count = 0; }
+	void timed_out() { if (pinged() && timeout_count < 0xfe) ++timeout_count; }
 	int fail_count() const { return pinged() ? timeout_count : 0; }
 	void reset_fail_count() { if (pinged()) timeout_count = 0; }
-	udp::endpoint ep() const { return udp::endpoint(addr, port); }
+	udp::endpoint ep() const { return udp::endpoint(endpoint); }
 	bool confirmed() const { return timeout_count == 0; }
 	void update_rtt(int new_rtt)
 	{
 		if (rtt == 0xffff) rtt = new_rtt;
 		else rtt = int(rtt) / 3 + int(new_rtt) * 2 / 3;
 	}
+	address addr() const { return endpoint.address(); }
+	int port() const { return endpoint.port; }
 
-	// TODO: 2 replace with a union of address_v4 and address_v6
-	// to not waste space. This struct is instantiated hundreds of times
-	// for the routing table
-	address addr;
-	boost::uint16_t port;
+	union_endpoint endpoint;
 	// the number of times this node has failed to
 	// respond in a row
-	boost::uint16_t timeout_count;
+	boost::uint8_t timeout_count;
 	// the average RTT of this node
 	boost::uint16_t rtt;
 	node_id id;
