@@ -322,13 +322,13 @@ routing_table::table_t::iterator routing_table::find_bucket(node_id const& id)
 
 bool compare_ip_cidr(node_entry const& lhs, node_entry const& rhs)
 {
-	TORRENT_ASSERT(lhs.addr.is_v4() == rhs.addr.is_v4());
+	TORRENT_ASSERT(lhs.addr().is_v4() == rhs.addr().is_v4());
 	// the number of bits in the IPs that may match. If
 	// more bits that this matches, something suspicious is
 	// going on and we shouldn't add the second one to our
 	// routing table
-	int cutoff = rhs.addr.is_v4() ? 8 : 64;
-	int dist = cidr_distance(lhs.addr, rhs.addr);
+	int cutoff = rhs.addr().is_v4() ? 8 : 64;
+	int dist = cidr_distance(lhs.addr(), rhs.addr());
 	return dist <= cutoff;
 }
 
@@ -340,16 +340,16 @@ node_entry* routing_table::find_node(udp::endpoint const& ep, routing_table::tab
 		for (bucket_t::iterator j = i->replacements.begin();
 			j != i->replacements.end(); ++j)
 		{
-			if (j->addr != ep.address()) continue;
-			if (j->port != ep.port()) continue;
+			if (j->addr() != ep.address()) continue;
+			if (j->port() != ep.port()) continue;
 			*bucket = i;
 			return &*j;
 		}
 		for (bucket_t::iterator j = i->live_nodes.begin();
 			j != i->live_nodes.end(); ++j)
 		{
-			if (j->addr != ep.address()) continue;
-			if (j->port != ep.port()) continue;
+			if (j->addr() != ep.address()) continue;
+			if (j->port() != ep.port()) continue;
 			*bucket = i;
 			return &*j;
 		}
@@ -368,7 +368,7 @@ bool routing_table::add_node(node_entry e)
 	if (e.id == m_id) return ret;
 
 	// do we already have this IP in the table?
-	if (m_ips.find(e.addr.to_v4().to_bytes()) != m_ips.end())
+	if (m_ips.find(e.addr().to_v4().to_bytes()) != m_ips.end())
 	{
 		// this exact IP already exists in the table. It might be the case
 		// that the node changed IP. If pinged is true, and the port also
@@ -389,7 +389,7 @@ bool routing_table::add_node(node_entry e)
 			{
 #ifdef TORRENT_DHT_VERBOSE_LOGGING
 				TORRENT_LOG(table) << "ignoring node (duplicate IP): "
-					<< e.id << " " << e.addr;
+					<< e.id << " " << e.addr();
 #endif
 				return ret;
 			}
@@ -412,10 +412,10 @@ bool routing_table::add_node(node_entry e)
 			for (bucket_t::iterator i = b.begin(), end(b.end());
 				i != end; ++i)
 			{
-				if (i->addr != e.addr || i->port != e.port) continue;
+				if (i->addr() != e.addr() || i->port() != e.port()) continue;
    #ifdef TORRENT_DHT_VERBOSE_LOGGING
 				TORRENT_LOG(table) << "node ID changed, deleting old entry: "
-					<< i->id << " " << i->addr;
+					<< i->id << " " << i->addr();
 	#endif
 				b.erase(i);
 				done = true;
@@ -426,10 +426,10 @@ bool routing_table::add_node(node_entry e)
 				for (bucket_t::iterator i = rb.begin(), end(rb.end());
 					i != end; ++i)
 				{
-					if (i->addr != e.addr || i->port != e.port) continue;
+					if (i->addr() != e.addr() || i->port() != e.port()) continue;
 	#ifdef TORRENT_DHT_VERBOSE_LOGGING
 					TORRENT_LOG(table) << "node ID changed, deleting old entry: "
-						<< i->id << " " << i->addr;
+						<< i->id << " " << i->addr();
 	#endif
 					rb.erase(i);
 					done = true;
@@ -437,7 +437,7 @@ bool routing_table::add_node(node_entry e)
 				}
 			}
 			TORRENT_ASSERT(done);
-			m_ips.erase(e.addr.to_v4().to_bytes());
+			m_ips.erase(e.addr().to_v4().to_bytes());
 		}
 	}
 	
@@ -457,13 +457,13 @@ bool routing_table::add_node(node_entry e)
 	{
 		// a new IP address just claimed this node-ID
 		// ignore it
-		if (j->addr != e.addr || j->port != e.port) return ret;
+		if (j->addr() != e.addr() || j->port() != e.port()) return ret;
 
 		// we already have the node in our bucket
 		TORRENT_ASSERT(j->id == e.id && j->ep() == e.ep());
 		j->timeout_count = 0;
 		j->update_rtt(e.rtt);
-//		TORRENT_LOG(table) << "updating node: " << i->id << " " << i->addr;
+//		TORRENT_LOG(table) << "updating node: " << i->id << " " << i->addr();
 		return ret;
 	}
 
@@ -476,12 +476,12 @@ bool routing_table::add_node(node_entry e)
 	{
 		// a new IP address just claimed this node-ID
 		// ignore it
-		if (j->addr != e.addr || j->port != e.port) return ret;
+		if (j->addr() != e.addr() || j->port() != e.port()) return ret;
 		TORRENT_ASSERT(j->id == e.id && j->ep() == e.ep());
 		j->timeout_count = 0;
 		j->update_rtt(e.rtt);
 		e = *j;
-		m_ips.erase(j->addr.to_v4().to_bytes());
+		m_ips.erase(j->addr().to_v4().to_bytes());
 		rb.erase(j);
 	}
 
@@ -495,9 +495,9 @@ bool routing_table::add_node(node_entry e)
 			// close to this one. We know that it's not the same, because
 			// it claims a different node-ID. Ignore this to avoid attacks
 #ifdef TORRENT_DHT_VERBOSE_LOGGING
-			TORRENT_LOG(table) << "ignoring node: " << e.id << " " << e.addr
+			TORRENT_LOG(table) << "ignoring node: " << e.id << " " << e.addr()
 				<< " existing node: "
-				<< j->id << " " << j->addr;
+				<< j->id << " " << j->addr();
 #endif
 			return ret;
 		}
@@ -507,9 +507,9 @@ bool routing_table::add_node(node_entry e)
 		{
 			// same thing but for the replacement bucket
 #ifdef TORRENT_DHT_VERBOSE_LOGGING
-			TORRENT_LOG(table) << "ignoring (replacement) node: " << e.id << " " << e.addr
+			TORRENT_LOG(table) << "ignoring (replacement) node: " << e.id << " " << e.addr()
 				<< " existing node: "
-				<< j->id << " " << j->addr;
+				<< j->id << " " << j->addr();
 #endif
 			return ret;
 		}
@@ -520,8 +520,8 @@ bool routing_table::add_node(node_entry e)
 	{
 		if (b.empty()) b.reserve(bucket_size_limit);
 		b.push_back(e);
-		m_ips.insert(e.addr.to_v4().to_bytes());
-//		TORRENT_LOG(table) << "inserting node: " << e.id << " " << e.addr;
+		m_ips.insert(e.addr().to_v4().to_bytes());
+//		TORRENT_LOG(table) << "inserting node: " << e.id << " " << e.addr();
 		return ret;
 	}
 
@@ -551,10 +551,10 @@ bool routing_table::add_node(node_entry e)
 		{
 			// j points to a node that has not been pinged.
 			// Replace it with this new one
-			m_ips.erase(j->addr.to_v4().to_bytes());
+			m_ips.erase(j->addr().to_v4().to_bytes());
 			*j = e;
-			m_ips.insert(e.addr.to_v4().to_bytes());
-//			TORRENT_LOG(table) << "replacing unpinged node: " << e.id << " " << e.addr;
+			m_ips.insert(e.addr().to_v4().to_bytes());
+//			TORRENT_LOG(table) << "replacing unpinged node: " << e.id << " " << e.addr();
 			return ret;
 		}
 
@@ -572,10 +572,10 @@ bool routing_table::add_node(node_entry e)
 		{
 			// i points to a node that has been marked
 			// as stale. Replace it with this new one
-			m_ips.erase(j->addr.to_v4().to_bytes());
+			m_ips.erase(j->addr().to_v4().to_bytes());
 			*j = e;
-			m_ips.insert(e.addr.to_v4().to_bytes());
-//			TORRENT_LOG(table) << "replacing stale node: " << e.id << " " << e.addr;
+			m_ips.insert(e.addr().to_v4().to_bytes());
+//			TORRENT_LOG(table) << "replacing stale node: " << e.id << " " << e.addr();
 			return ret;
 		}
 
@@ -587,10 +587,10 @@ bool routing_table::add_node(node_entry e)
 
 		if (j != b.end() && j->rtt > e.rtt)
 		{
-			m_ips.erase(j->addr.to_v4().to_bytes());
+			m_ips.erase(j->addr().to_v4().to_bytes());
 			*j = e;
-			m_ips.insert(e.addr.to_v4().to_bytes());
-//			TORRENT_LOG(table) << "replacing node with higher RTT: " << e.id << " " << e.addr;
+			m_ips.insert(e.addr().to_v4().to_bytes());
+//			TORRENT_LOG(table) << "replacing node with higher RTT: " << e.id << " " << e.addr();
 			return ret;
 		}
 	}
@@ -624,14 +624,14 @@ bool routing_table::add_node(node_entry e)
 			// less reliable than this one, that has been pinged
 			j = std::find_if(rb.begin(), rb.end(), boost::bind(&node_entry::pinged, _1) == false);
 			if (j == rb.end()) j = rb.begin();
-			m_ips.erase(j->addr.to_v4().to_bytes());
+			m_ips.erase(j->addr().to_v4().to_bytes());
 			rb.erase(j);
 		}
 
 		if (rb.empty()) rb.reserve(m_bucket_size);
 		rb.push_back(e);
-		m_ips.insert(e.addr.to_v4().to_bytes());
-//		TORRENT_LOG(table) << "inserting node in replacement cache: " << e.id << " " << e.addr;
+		m_ips.insert(e.addr().to_v4().to_bytes());
+//		TORRENT_LOG(table) << "inserting node in replacement cache: " << e.id << " " << e.addr();
 		return ret;
 	}
 
@@ -648,7 +648,7 @@ bool routing_table::add_node(node_entry e)
 	else if (int(nrb.size()) < m_bucket_size)
 		nrb.push_back(e);
 
-	m_ips.insert(e.addr.to_v4().to_bytes());
+	m_ips.insert(e.addr().to_v4().to_bytes());
 
 	while (m_buckets.back().live_nodes.size() > bucket_limit(m_buckets.size()-1))
 		split_bucket();
@@ -773,13 +773,13 @@ void routing_table::node_failed(node_id const& id, udp::endpoint const& ep)
 		// has never responded at all, remove it
 		if (j->fail_count() >= m_settings.max_fail_count || !j->pinged())
 		{
-			m_ips.erase(j->addr.to_v4().to_bytes());
+			m_ips.erase(j->addr().to_v4().to_bytes());
 			b.erase(j);
 		}
 		return;
 	}
 
-	m_ips.erase(j->addr.to_v4().to_bytes());
+	m_ips.erase(j->addr().to_v4().to_bytes());
 	b.erase(j);
 
 	// sort by RTT first, to find the node with the lowest
