@@ -1670,8 +1670,8 @@ int test_main()
 	if (!nodes.empty())
 	{
 		TEST_EQUAL(nodes[0].id, tmp);
-		TEST_EQUAL(nodes[0].addr, address_v4::from_string("4.4.4.4"));
-		TEST_EQUAL(nodes[0].port, 4);
+		TEST_EQUAL(nodes[0].addr(), address_v4::from_string("4.4.4.4"));
+		TEST_EQUAL(nodes[0].port(), 4);
 		TEST_EQUAL(nodes[0].timeout_count, 0);
 	}
 
@@ -1684,8 +1684,8 @@ int test_main()
 	if (!nodes.empty())
 	{
 		TEST_EQUAL(nodes[0].id, tmp);
-		TEST_EQUAL(nodes[0].addr, address_v4::from_string("4.4.4.4"));
-		TEST_EQUAL(nodes[0].port, 4);
+		TEST_EQUAL(nodes[0].addr(), address_v4::from_string("4.4.4.4"));
+		TEST_EQUAL(nodes[0].port(), 4);
 		TEST_EQUAL(nodes[0].timeout_count, 1);
 	}
 
@@ -1697,8 +1697,8 @@ int test_main()
 	if (!nodes.empty())
 	{
 		TEST_EQUAL(nodes[0].id, tmp);
-		TEST_EQUAL(nodes[0].addr, address_v4::from_string("4.4.4.4"));
-		TEST_EQUAL(nodes[0].port, 4);
+		TEST_EQUAL(nodes[0].addr(), address_v4::from_string("4.4.4.4"));
+		TEST_EQUAL(nodes[0].port(), 4);
 		TEST_EQUAL(nodes[0].timeout_count, 0);
 	}
 
@@ -1711,8 +1711,8 @@ int test_main()
 	if (!nodes.empty())
 	{
 		TEST_EQUAL(nodes[0].id, tmp);
-		TEST_EQUAL(nodes[0].addr, address_v4::from_string("4.4.4.4"));
-		TEST_EQUAL(nodes[0].port, 4);
+		TEST_EQUAL(nodes[0].addr(), address_v4::from_string("4.4.4.4"));
+		TEST_EQUAL(nodes[0].port(), 4);
 	}
 
 	// test adding the same node ID again with a different IP (should be ignored)
@@ -1722,8 +1722,8 @@ int test_main()
 	if (!nodes.empty())
 	{
 		TEST_EQUAL(nodes[0].id, tmp);
-		TEST_EQUAL(nodes[0].addr, address_v4::from_string("4.4.4.4"));
-		TEST_EQUAL(nodes[0].port, 4);
+		TEST_EQUAL(nodes[0].addr(), address_v4::from_string("4.4.4.4"));
+		TEST_EQUAL(nodes[0].port(), 4);
 	}
 
 	// test adding a node that ends up in the same bucket with an IP
@@ -1735,8 +1735,8 @@ int test_main()
 	if (!nodes.empty())
 	{
 		TEST_EQUAL(nodes[0].id, tmp);
-		TEST_EQUAL(nodes[0].addr, address_v4::from_string("4.4.4.4"));
-		TEST_EQUAL(nodes[0].port, 4);
+		TEST_EQUAL(nodes[0].addr(), address_v4::from_string("4.4.4.4"));
+		TEST_EQUAL(nodes[0].port(), 4);
 	}
 
 	s.restrict_routing_ips = false;
